ready to calculate

--- a/index.html
+++ b/index.html
@@ -10,38 +10,38 @@
 <body>
     <div class="calc">
         <div class="content">
-            <div class="input"><span class="input_text">1,258.2</span></div>
+            <div class="input"><span class="input_text">0</span></div>
             <div class="numpad">
                 <div class="btns-row">
-                    <div class="btn btn-clear btn-light-grey"><span>C<span></div>
-                    <div class="btn btn-delete"><span>⌫<span></div>
-                    <div class="btn"><span>÷<span></div>
+                    <div class="btn btn-clear btn-light-grey"><span>C</span></div>
+                    <div class="btn btn-delete"><span>⌫</span></div>
+                    <div class="btn btn-div"><span>÷</span></div>
                 </div>
                 <div class="btns-row">
-                    <div class="btn"><span>7<span></div>
-                    <div class="btn"><span>8<span></div>
-                    <div class="btn"><span>9<span></div>
-                    <div class="btn btn-puprle"><span>×<span></div>
+                    <div class="btn btn-seven"><span>7</span></div>
+                    <div class="btn btn-eight"><span>8</span></div>
+                    <div class="btn btn-nine"><span>9</span></div>
+                    <div class="btn btn-purple btn-mult"><span>×</span></div>
                 </div>
                 <div class="btns-row">
-                    <div class="btn"><span>4<span></div>
-                    <div class="btn"><span>5<span></div>
-                    <div class="btn"><span>6<span></div>
-                    <div class="btn btn-puprle"><span>–<span></div>
+                    <div class="btn btn-four"><span>4</span></div>
+                    <div class="btn btn-five"><span>5</span></div>
+                    <div class="btn btn-six"><span>6</span></div>
+                    <div class="btn btn-purple btn-sub"><span>–</span></div>
                 </div>
                 <div class="btns-row">
-                    <div class="btn"><span>1<span></div>
-                    <div class="btn"><span>2<span></div>
-                    <div class="btn"><span>3<span></div>
-                    <div class="btn btn-puprle"><span>+<span></div>
+                    <div class="btn btn-one"><span>1</span></div>
+                    <div class="btn btn-two"><span>2</span></div>
+                    <div class="btn btn-three"><span>3</span></div>
+                    <div class="btn btn-purple btn-sum"><span>+</span></div>
                 </div>
                 <div class="btns-row">
-                    <div class="btn btn-zero"><span>0<span></div>
-                    <div class="btn btn-puprle"><span>=<span></div>
+                    <div class="btn btn-zero"><span>0</span></div>
+                    <div class="btn btn-purple btn-result"><span>=</span></div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="js/app.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
